Repository methods for independent data loading separated. Presentation models added. Models parameters nullability fixed. Nav component added.

--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -13,6 +13,6 @@
     </fragment>
     <fragment
         android:id="@+id/newsDetailsFragment"
-        android:name="siergo_o.onlinernews.presentation.base.NewsDetailsFragment"
+        android:name="siergo_o.onlinernews.presentation.screen.detail.NewsDetailsFragment"
         android:label="NewsDetailsFragment" />
 </navigation>
