--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="white">#fff</color>
     <color name="colorPrimary">#f4f4f4</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="tabtextcolor">#1a6dbb</color>
-    <color name="tabindicatorcolor">#2d2d2d</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="tabtextcolor">#1a6dbb</color>
+    <color name="tabindicatorcolor">#196AB6</color>
     <color name="box">#c6c096</color>
 </resources>
