Search ui template implemented. Rx multi result util classes implemented.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="white">#fff</color>
     <color name="colorPrimary">#f4f4f4</color>
     <color name="colorPrimaryDark">#00467f</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#000</color>
     <color name="tabtextcolor">#1a6dbb</color>
     <color name="tabindicatorcolor">#00467f</color>
     <color name="box">#c6c096</color>
