--- a/app/src/main/res/layout/fragment_home_content.xml
+++ b/app/src/main/res/layout/fragment_home_content.xml
@@ -28,23 +28,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
-                    android:paddingStart="0dp"
-                    android:paddingTop="4dp"
-                    android:paddingEnd="48dp"
                     app:endIconDrawable="@drawable/ic_close"
                     app:endIconMode="clear_text"
+                    app:endIconTint="@android:color/black"
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/search_news"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center_vertical"
                         android:background="@android:color/transparent"
+                        android:gravity="center_vertical"
                         android:imeOptions="actionSearch"
                         android:inputType="text"
-                        android:paddingStart="12dp"
-                        android:paddingEnd="12dp"
+                        android:maxLength="100"
+                        android:maxLines="1"
+                        android:singleLine="true"
                         android:textColor="@color/colorAccent"
                         android:visibility="gone" />
 
@@ -58,7 +58,7 @@
                     android:layout_gravity="center_horizontal"
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
-                    android:paddingBottom="4dp"
+                    android:paddingBottom="6dp"
                     android:src="@drawable/logo_onliner_toolbar" />
 
                 <ImageView
